interpreter/src/parser/VLParser.cpp

// Generated from VL.g4 by ANTLR 4.13.2


#include "VLListener.h"
#include "VLVisitor.h"

#include "VLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct VLParserStaticData final {
  VLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  VLParserStaticData(const VLParserStaticData&) = delete;
  VLParserStaticData(VLParserStaticData&&) = delete;
  VLParserStaticData& operator=(const VLParserStaticData&) = delete;
  VLParserStaticData& operator=(VLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag vlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<VLParserStaticData> vlParserStaticData = nullptr;

void vlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (vlParserStaticData != nullptr) {
    return;
  }
#else
  assert(vlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<VLParserStaticData>(
    std::vector<std::string>{
      "program", "importStmt", "block", "functionDecl", "visibility", "paramList", 
      "param", "statement", "createDeclStmt", "createInitStmt", "mutability", 
      "setPropertyStmt", "setArrayItemStmt", "printStmt", "returnStmt", 
      "expr", "primary", "methodCallStmt", "functionCallStmt", "arrayAccess", 
      "argList", "ifStmt", "loopStmt", "condStmt", "comparisonOp", "dataType", 
      "primitiveType", "arrayType", "functionType", "typeList", "arrayLiteral", 
      "literal"
    },
    std::vector<std::string>{
      "", "'import'", "'as'", "'exec'", "'{'", "'}'", "'fn'", "'=>'", "'('", 
      "')'", "'opn'", "','", "'mut'", "'='", "'const'", "'set'", "'['", 
      "']'", "'print'", "'return'", "'*'", "'/'", "'%'", "'+'", "'-'", "'->'", 
      "'.'", "'if'", "'while'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", 
      "'void'", "'[]'", "';'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "SEMI", "BOOL", "FLOAT", "INT", "STRING", "ID", "WS", 
      "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  vlParserStaticData = std::move(staticData);
}

}

VLParser::VLParser(TokenStream *input) : VLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

VLParser::VLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  VLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *vlParserStaticData->atn, vlParserStaticData->decisionToDFA, vlParserStaticData->sharedContextCache, options);
}

VLParser::~VLParser() {
  delete _interpreter;
}

const atn::ATN& VLParser::getATN() const {
  return *vlParserStaticData->atn;
}

std::string VLParser::getGrammarFileName() const {
  return "VL.g4";
}

const std::vector<std::string>& VLParser::getRuleNames() const {
  return vlParserStaticData->ruleNames;
}

const dfa::Vocabulary& VLParser::getVocabulary() const {
  return vlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView VLParser::getSerializedATN() const {
  return vlParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

VLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VLParser::ProgramContext::EOF() {
  return getToken(VLParser::EOF, 0);
}

std::vector<VLParser::ImportStmtContext *> VLParser::ProgramContext::importStmt() {
  return getRuleContexts<VLParser::ImportStmtContext>();
}

VLParser::ImportStmtContext* VLParser::ProgramContext::importStmt(size_t i) {
  return getRuleContext<VLParser::ImportStmtContext>(i);
}

std::vector<VLParser::FunctionDeclContext *> VLParser::ProgramContext::functionDecl() {
  return getRuleContexts<VLParser::FunctionDeclContext>();
}

VLParser::FunctionDeclContext* VLParser::ProgramContext::functionDecl(size_t i) {
  return getRuleContext<VLParser::FunctionDeclContext>(i);
}

VLParser::BlockContext* VLParser::ProgramContext::block() {
  return getRuleContext<VLParser::BlockContext>(0);
}


size_t VLParser::ProgramContext::getRuleIndex() const {
  return VLParser::RuleProgram;
}

void VLParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void VLParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any VLParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

VLParser::ProgramContext* VLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, VLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == VLParser::T__0) {
      setState(64);
      importStmt();
      setState(69);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(73);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == VLParser::T__5

    || _la == VLParser::T__9) {
      setState(70);
      functionDecl();
      setState(75);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == VLParser::T__2) {
      setState(76);
      block();
    }
    setState(79);
    match(VLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStmtContext ------------------------------------------------------------------

VLParser::ImportStmtContext::ImportStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VLParser::ImportStmtContext::STRING() {
  return getToken(VLParser::STRING, 0);
}

tree::TerminalNode* VLParser::ImportStmtContext::SEMI() {
  return getToken(VLParser::SEMI, 0);
}

tree::TerminalNode* VLParser::ImportStmtContext::ID() {
  return getToken(VLParser::ID, 0);
}


size_t VLParser::ImportStmtContext::getRuleIndex() const {
  return VLParser::RuleImportStmt;
}

void VLParser::ImportStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStmt(this);
}

void VLParser::ImportStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStmt(this);
}


std::any VLParser::ImportStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitImportStmt(this);
  else
    return visitor->visitChildren(this);
}

VLParser::ImportStmtContext* VLParser::importStmt() {
  ImportStmtContext *_localctx = _tracker.createInstance<ImportStmtContext>(_ctx, getState());
  enterRule(_localctx, 2, VLParser::RuleImportStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(VLParser::T__0);
    setState(82);
    match(VLParser::STRING);
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == VLParser::T__1) {
      setState(83);
      match(VLParser::T__1);
      setState(84);
      match(VLParser::ID);
    }
    setState(87);
    match(VLParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

VLParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<VLParser::StatementContext *> VLParser::BlockContext::statement() {
  return getRuleContexts<VLParser::StatementContext>();
}

VLParser::StatementContext* VLParser::BlockContext::statement(size_t i) {
  return getRuleContext<VLParser::StatementContext>(i);
}


size_t VLParser::BlockContext::getRuleIndex() const {
  return VLParser::RuleBlock;
}

void VLParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void VLParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any VLParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

VLParser::BlockContext* VLParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, VLParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(VLParser::T__2);
    setState(90);
    match(VLParser::T__3);
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4398450003968) != 0)) {
      setState(91);
      statement();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    match(VLParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

VLParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VLParser::FunctionDeclContext::ID() {
  return getToken(VLParser::ID, 0);
}

VLParser::BlockContext* VLParser::FunctionDeclContext::block() {
  return getRuleContext<VLParser::BlockContext>(0);
}

VLParser::VisibilityContext* VLParser::FunctionDeclContext::visibility() {
  return getRuleContext<VLParser::VisibilityContext>(0);
}

VLParser::DataTypeContext* VLParser::FunctionDeclContext::dataType() {
  return getRuleContext<VLParser::DataTypeContext>(0);
}

VLParser::ParamListContext* VLParser::FunctionDeclContext::paramList() {
  return getRuleContext<VLParser::ParamListContext>(0);
}


size_t VLParser::FunctionDeclContext::getRuleIndex() const {
  return VLParser::RuleFunctionDecl;
}

void VLParser::FunctionDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDecl(this);
}

void VLParser::FunctionDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDecl(this);
}


std::any VLParser::FunctionDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitFunctionDecl(this);
  else
    return visitor->visitChildren(this);
}

VLParser::FunctionDeclContext* VLParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, VLParser::RuleFunctionDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == VLParser::T__9) {
      setState(99);
      visibility();
    }
    setState(102);
    match(VLParser::T__5);
    setState(103);
    match(VLParser::ID);
    setState(106);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == VLParser::T__6) {
      setState(104);
      match(VLParser::T__6);
      setState(105);
      dataType();
    }
    setState(108);
    match(VLParser::T__7);
    setState(110);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == VLParser::ID) {
      setState(109);
      paramList();
    }
    setState(112);
    match(VLParser::T__8);
    setState(113);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VisibilityContext ------------------------------------------------------------------

VLParser::VisibilityContext::VisibilityContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t VLParser::VisibilityContext::getRuleIndex() const {
  return VLParser::RuleVisibility;
}

void VLParser::VisibilityContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVisibility(this);
}

void VLParser::VisibilityContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVisibility(this);
}


std::any VLParser::VisibilityContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitVisibility(this);
  else
    return visitor->visitChildren(this);
}

VLParser::VisibilityContext* VLParser::visibility() {
  VisibilityContext *_localctx = _tracker.createInstance<VisibilityContext>(_ctx, getState());
  enterRule(_localctx, 8, VLParser::RuleVisibility);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(VLParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

VLParser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<VLParser::ParamContext *> VLParser::ParamListContext::param() {
  return getRuleContexts<VLParser::ParamContext>();
}

VLParser::ParamContext* VLParser::ParamListContext::param(size_t i) {
  return getRuleContext<VLParser::ParamContext>(i);
}


size_t VLParser::ParamListContext::getRuleIndex() const {
  return VLParser::RuleParamList;
}

void VLParser::ParamListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamList(this);
}

void VLParser::ParamListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamList(this);
}


std::any VLParser::ParamListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitParamList(this);
  else
    return visitor->visitChildren(this);
}

VLParser::ParamListContext* VLParser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 10, VLParser::RuleParamList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    param();
    setState(122);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == VLParser::T__10) {
      setState(118);
      match(VLParser::T__10);
      setState(119);
      param();
      setState(124);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

VLParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VLParser::ParamContext::ID() {
  return getToken(VLParser::ID, 0);
}

VLParser::DataTypeContext* VLParser::ParamContext::dataType() {
  return getRuleContext<VLParser::DataTypeContext>(0);
}


size_t VLParser::ParamContext::getRuleIndex() const {
  return VLParser::RuleParam;
}

void VLParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void VLParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}


std::any VLParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

VLParser::ParamContext* VLParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 12, VLParser::RuleParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(VLParser::ID);
    setState(126);
    match(VLParser::T__6);
    setState(127);
    dataType();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

VLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

VLParser::CreateDeclStmtContext* VLParser::StatementContext::createDeclStmt() {
  return getRuleContext<VLParser::CreateDeclStmtContext>(0);
}

tree::TerminalNode* VLParser::StatementContext::SEMI() {
  return getToken(VLParser::SEMI, 0);
}

VLParser::CreateInitStmtContext* VLParser::StatementContext::createInitStmt() {
  return getRuleContext<VLParser::CreateInitStmtContext>(0);
}

VLParser::SetPropertyStmtContext* VLParser::StatementContext::setPropertyStmt() {
  return getRuleContext<VLParser::SetPropertyStmtContext>(0);
}

VLParser::SetArrayItemStmtContext* VLParser::StatementContext::setArrayItemStmt() {
  return getRuleContext<VLParser::SetArrayItemStmtContext>(0);
}

VLParser::PrintStmtContext* VLParser::StatementContext::printStmt() {
  return getRuleContext<VLParser::PrintStmtContext>(0);
}

VLParser::FunctionCallStmtContext* VLParser::StatementContext::functionCallStmt() {
  return getRuleContext<VLParser::FunctionCallStmtContext>(0);
}

VLParser::MethodCallStmtContext* VLParser::StatementContext::methodCallStmt() {
  return getRuleContext<VLParser::MethodCallStmtContext>(0);
}

VLParser::ReturnStmtContext* VLParser::StatementContext::returnStmt() {
  return getRuleContext<VLParser::ReturnStmtContext>(0);
}

VLParser::IfStmtContext* VLParser::StatementContext::ifStmt() {
  return getRuleContext<VLParser::IfStmtContext>(0);
}

VLParser::LoopStmtContext* VLParser::StatementContext::loopStmt() {
  return getRuleContext<VLParser::LoopStmtContext>(0);
}


size_t VLParser::StatementContext::getRuleIndex() const {
  return VLParser::RuleStatement;
}

void VLParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void VLParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any VLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

VLParser::StatementContext* VLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 14, VLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(155);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(129);
      createDeclStmt();
      setState(130);
      match(VLParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(132);
      createInitStmt();
      setState(133);
      match(VLParser::SEMI);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(135);
      setPropertyStmt();
      setState(136);
      match(VLParser::SEMI);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(138);
      setArrayItemStmt();
      setState(139);
      match(VLParser::SEMI);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(141);
      printStmt();
      setState(142);
      match(VLParser::SEMI);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(144);
      functionCallStmt();
      setState(145);
      match(VLParser::SEMI);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(147);
      methodCallStmt();
      setState(148);
      match(VLParser::SEMI);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(150);
      returnStmt();
      setState(151);
      match(VLParser::SEMI);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(153);
      ifStmt();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(154);
      loopStmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDeclStmtContext ------------------------------------------------------------------

VLParser::CreateDeclStmtContext::CreateDeclStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VLParser::CreateDeclStmtContext::ID() {
  return getToken(VLParser::ID, 0);
}

VLParser::DataTypeContext* VLParser::CreateDeclStmtContext::dataType() {
  return getRuleContext<VLParser::DataTypeContext>(0);
}


size_t VLParser::CreateDeclStmtContext::getRuleIndex() const {
  return VLParser::RuleCreateDeclStmt;
}

void VLParser::CreateDeclStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateDeclStmt(this);
}

void VLParser::CreateDeclStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateDeclStmt(this);
}


std::any VLParser::CreateDeclStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitCreateDeclStmt(this);
  else
    return visitor->visitChildren(this);
}

VLParser::CreateDeclStmtContext* VLParser::createDeclStmt() {
  CreateDeclStmtContext *_localctx = _tracker.createInstance<CreateDeclStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, VLParser::RuleCreateDeclStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    match(VLParser::T__11);
    setState(158);
    match(VLParser::ID);
    setState(159);
    match(VLParser::T__6);
    setState(160);
    dataType();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateInitStmtContext ------------------------------------------------------------------

VLParser::CreateInitStmtContext::CreateInitStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

VLParser::MutabilityContext* VLParser::CreateInitStmtContext::mutability() {
  return getRuleContext<VLParser::MutabilityContext>(0);
}

tree::TerminalNode* VLParser::CreateInitStmtContext::ID() {
  return getToken(VLParser::ID, 0);
}

VLParser::DataTypeContext* VLParser::CreateInitStmtContext::dataType() {
  return getRuleContext<VLParser::DataTypeContext>(0);
}

VLParser::ArrayLiteralContext* VLParser::CreateInitStmtContext::arrayLiteral() {
  return getRuleContext<VLParser::ArrayLiteralContext>(0);
}

VLParser::ExprContext* VLParser::CreateInitStmtContext::expr() {
  return getRuleContext<VLParser::ExprContext>(0);
}


size_t VLParser::CreateInitStmtContext::getRuleIndex() const {
  return VLParser::RuleCreateInitStmt;
}

void VLParser::CreateInitStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateInitStmt(this);
}

void VLParser::CreateInitStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateInitStmt(this);
}


std::any VLParser::CreateInitStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VLVisitor*>(visitor))
    return parserVisitor->visitCreateInitStmt(this);
  else
    return visitor->visitChildren(this);
}
